--- a/src/view/AuftragAnlegen.form
+++ b/src/view/AuftragAnlegen.form
@@ -28,7 +28,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="AuftragAnlegen" alignment="0" pref="842" max="32767" attributes="0"/>
+          <Component id="AuftragAnlegen" alignment="0" pref="854" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -619,7 +619,7 @@
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="jftfErfassungsdatum_aa">
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jftfErfassungsdatum_aaActionPerformed"/>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="jftfErfassungsdatum_aaFocusLost"/>
           </Events>
         </Component>
       </SubComponents>
