--- a/src/view/AuftragAnzeigen.form
+++ b/src/view/AuftragAnzeigen.form
@@ -123,7 +123,7 @@
                   <EmptySpace pref="38" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" attributes="0">
-                          <Component id="jbSpeichern_az" min="-2" pref="130" max="-2" attributes="0"/>
+                          <Component id="jbAnzeigen_az" min="-2" pref="130" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="jbBearbeiten_az" min="-2" pref="130" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -230,7 +230,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jbZurueck_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbBearbeiten_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="jbSpeichern_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jbAnzeigen_az" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="51" max="32767" attributes="0"/>
               </Group>
@@ -314,18 +314,18 @@
             <Property name="text" type="java.lang.String" value="Lieferdatum:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JButton" name="jbSpeichern_az">
+        <Component class="javax.swing.JButton" name="jbAnzeigen_az">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="16" style="0"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/view/speichern2.png"/>
+              <Image iconType="3" name="/view/anzeigen.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Speichern"/>
+            <Property name="text" type="java.lang.String" value="Anzeigen"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSpeichern_azActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbAnzeigen_azActionPerformed"/>
           </Events>
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
